Asteroide/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\PROGRAMAS\Greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\PROGRAMAS\Greenfoot\lib\greenfoot.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\bluejcore.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\bluejeditor.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\bluejext2.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\junit-jupiter-5.5.2.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\junit-platform-console-1.5.2.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\junit-platform-console-standalone-1.5.2.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\junit-platform-reporting-1.5.2.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\junit-platform-runner-1.5.2.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\junit-platform-testkit-1.5.2.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\junit-quickcheck-core-0.9.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\hamcrest-core-1.3.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\bluej.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\classgraph-4.8.90.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\diffutils-1.2.1.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\jl1.0.1.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\opencsv-2.3.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\xom-1.3.7.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\lang-stride.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\nsmenufx-2.1.8.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\wellbehavedfx-0.3.3.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\guava-17.0.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\httpclient-4.1.1.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\httpcore-4.1.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\httpmime-4.1.1.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\javafx\lib\javafx.base.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\javafx\lib\javafx.controls.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\javafx\lib\javafx.media.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\javafx\lib\javafx.properties.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\javafx\lib\javafx.swing.jar;C:\Program Files\PROGRAMAS\Greenfoot\lib\javafx\lib\javafx.web.jar;C:\Users\alunolab10\Desktop\Teste
-d
C:\Users\alunolab10\Desktop\Teste\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\alunolab10\Desktop\Teste\Nave.java
<---- end of javadoc command ---->
Loading source file C:\Users\alunolab10\Desktop\Teste\Nave.java...
C:\Users\alunolab10\Desktop\Teste\Nave.java:49: error: ';' expected
            projetil.turnTowards(1, 1)
                                      ^
1 error
